# mavlink-router

./: meson.build
tools/: mavgen.sh
